// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scroller component should render a vertical scroller 1`] = `
<div
  className="scroller-container"
  data-testid="scroller-container"
  onScroll={[Function]}
  style={
    Object {
      "maxHeight": 300,
      "maxWidth": 300,
      "overflowX": "hidden",
      "overflowY": "scroll",
    }
  }
>
  <div
    className="scroller-content"
    style={
      Object {
        "minHeight": 298,
        "minWidth": 283,
      }
    }
  />
  <div
    className="scroller-scrollbar"
    style={
      Object {
        "minHeight": 3700,
        "minWidth": 315,
      }
    }
  />
</div>
`;

exports[`Scroller component should render an horizontal scroller 1`] = `
<div
  className="scroller-container"
  data-testid="scroller-container"
  onScroll={[Function]}
  style={
    Object {
      "maxHeight": 300,
      "maxWidth": 300,
      "overflowX": "scroll",
      "overflowY": "hidden",
    }
  }
>
  <div
    className="scroller-content"
    style={
      Object {
        "minHeight": 283,
        "minWidth": 298,
      }
    }
  />
  <div
    className="scroller-scrollbar"
    style={
      Object {
        "minHeight": 315,
        "minWidth": 4000,
      }
    }
  />
</div>
`;

exports[`Scroller component should render the default scroller 1`] = `
<div
  className="scroller-container"
  data-testid="scroller-container"
  onScroll={[Function]}
  style={
    Object {
      "maxHeight": 300,
      "maxWidth": 300,
      "overflowX": "scroll",
      "overflowY": "scroll",
    }
  }
>
  <div
    className="scroller-content"
    style={
      Object {
        "minHeight": 283,
        "minWidth": 283,
      }
    }
  />
  <div
    className="scroller-scrollbar"
    style={
      Object {
        "minHeight": 3715,
        "minWidth": 4015,
      }
    }
  />
</div>
`;
